<resources>
    <string name="app_name">FCIS</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <!--LoginStrings-->
    <string name="mainSignout">Signed out successfully</string>
    <string name="loginLogo">FCIS</string>
    <string name="loginName">Email</string>
    <string name="loginPass">Password</string>
    <string name="loginBtn">LOGIN</string>
    <string name="loginNot">Not a member yet?</string>
    <string name="loginForgot">Forgot Password?</string>
    <string name="loginToastFill">Please fill out all the fields</string>
    <string name="loginToastVerified">Email is not verified
        check your email inbox.</string>
    <string name="loginToastFailed">Email or Password is incorrect</string>

    <!--RegisterStrings-->
    <string name="registerName">Full Name</string>
    <string name="registerEmail">E-Mail</string>
    <string name="registerSeatNum">Seat Number</string>
    <string name="registerPassword">Password</string>
    <string name="registerPassword2">Confirm Password</string>
    <string name="registerBtn">REGISTER</string>
    <string name="registerAlready">Already a member?</string>
    <string name="registerToastPasswordMatch">Passwords did not match</string>
    <string name="registerToastEmpty">All fields must be filled out.</string>
    <string name="registerToastPhoto">Please choose a profile photo</string>
    <string name="registerPermission">Please accept the required permissions</string>
    <string name="registerToastSignup">Signup successful. Sending verification email.</string>

    <!--ForgotStrings-->
    <string name="forgotEmail">Enter Your Email</string>
    <string name="forgotBtn">ENTER</string>

    <!--TopBarStrings-->
    <string name="announcementsTag">Announcements</string>
    <string name="resultsTag">Results</string>
    <string name="chatTag">Chat</string>
    <string name="QandAnswersTag">Q&amp;A</string>
    <string name="tasksTag">Tasks</string>
    <string name="socialTag">Social</string>
    <string name="profileTag">Profile</string>

    <!--Post-->
    <string name="post_Success">Posted Successfully!</string>
    <string name="post_hint">Add an announcement!</string>

    <string name="title_activity_test">test</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

</resources>
