<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item android:id="@+id/nav_announcement"
            android:icon="@drawable/ic_announcement"
            android:title="@string/announcementsTag" />
        <item android:id="@+id/nav_tasks"
            android:icon="@drawable/ic_tasks"
            android:title="@string/tasksTag" />
        <item android:id="@+id/nav_QandA"
            android:icon="@drawable/ic_question_answer"
            android:title="@string/QandAnswersTag" />
        <item android:id="@+id/nav_results"
            android:icon="@drawable/ic_results"
            android:title="@string/resultsTag" />
        <item android:title="@string/socialTag">
            <menu>
                <item android:id="@+id/nav_Chat"
                    android:icon="@drawable/ic_chat"
                    android:title="@string/chatTag" />
                <item android:id="@+id/nav_Profile"
                    android:icon="@drawable/ic_profile"
                    android:title="@string/profileTag" />
            </menu>
        </item>
    </group>



</menu>